# face-matching

./: .gitignore  pyproject.toml
experiment/face-recognition/: main.ipynb
